--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 GoClimb/__pycache__/
 GoClimbApp/__pycache__/
 GoClimbApp/migrations/__pycache__/
+GoClimb/__pycache__/__init__.cpython-38.pyc
+GoClimb/__pycache__/settings.cpython-38.pyc
+GoClimb/__pycache__/urls.cpython-38.pyc
+GoClimb/__pycache__/wsgi.cpython-38.pyc
+GoClimbApp/__pycache__/__init__.cpython-38.pyc
+GoClimbApp/__pycache__/admin.cpython-38.pyc
+GoClimbApp/__pycache__/apps.cpython-38.pyc
+GoClimbApp/__pycache__/models.cpython-38.pyc
+GoClimbApp/__pycache__/urls.cpython-38.pyc
+GoClimbApp/__pycache__/views.cpython-38.pyc
+GoClimbApp/migrations/__pycache__/__init__.cpython-38.pyc
