--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,4 +30,4 @@ jobs:
         python manage.py makemigrations GoClimbApp
     - name: Run Tests
       run: |
-        python manage.py test
+        python manage.py test -r
