--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,6 @@ jobs:
 
     - name: Open SSH
       run: |
+        pwd
         cd .github/workflows
         ssh -i "key.pem" ubuntu@ec2-54-252-206-212.ap-southeast-2.compute.amazonaws.com
