--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,7 @@ jobs:
         python-version: [3.9]
   
     steps:
-    - name: checkout repo
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
     - name: Install OpenSSH
       run: |
         sudo apt-get install openssh-client
